--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,12 +27,26 @@
 
     </ScrollView>-->
 
-
-    <com.skywalker.syntaxhighlighter.HighlightView
-        android:id="@+id/HighlightView"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="123"/>
+    <com.skywalker.syntaxhighlighter.HighlightView
+        android:id="@+id/HighlightView1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="123"/>
+    <com.skywalker.syntaxhighlighter.HighlightView
+        android:id="@+id/HighlightView2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
 
 </LinearLayout>
