--- a/app/src/main/res/layout/activity1.xml
+++ b/app/src/main/res/layout/activity1.xml
@@ -3,9 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-        <com.skywalker.syntaxhighlighter.HighlightLayout
-            android:id="@+id/HighlightLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
+    <TextView
+        android:id="@+id/test"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
