添加可编辑和不可编辑功能

--- a/highlightlibrary/src/main/res/values/default.xml
+++ b/highlightlibrary/src/main/res/values/default.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="default_line_number">#AAAAAA</color>
+    <color name="default_line_bar">#323232</color>
+
     <color name="default_text">#F8F8F2</color>
     <color name="default_background">#282828</color>
 
@@ -9,6 +13,7 @@
     <color name="default_constant">#AE81FF</color>
     <color name="default_number">#AE81FF</color>
     <color name="default_statement">#F92672</color>
+    <color name="default_preproc">#CB4B16</color>
 
 
 </resources>
