--- a/app/src/main/res/layout/activity3.xml
+++ b/app/src/main/res/layout/activity3.xml
@@ -2,7 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <com.skywalker.syntaxhighlighter.HighlightView
         android:id="@+id/highlightView"
         android:layout_width="match_parent"
