--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,28 +11,57 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:orientation="horizontal">
-        <CheckBox
-            android:id="@+id/checkbox_linenumber"
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="语言"/>
+        <Spinner
+            android:id="@+id/languagesSpinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:entries="@array/languages"
+            android:layout_weight="1"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="主题"/>
+        <Spinner
+            android:id="@+id/themesSpinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:entries="@array/themes"
+            android:layout_weight="1"
+            />
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:orientation="horizontal">
+        <CheckBox
+            android:id="@+id/checkbox_linenumber"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="行号"/>
 
         <CheckBox
             android:id="@+id/checkbox_zoom"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="缩放"/>
 
         <CheckBox
             android:id="@+id/checkbox_wrapping"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="自动换行"/>
-        <Button
-            android:id="@+id/button_render"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="重新加载"/>
+
     </LinearLayout>
 
     <com.skywalker.syntaxhighlighter.HighlightView
