--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,5 +69,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        app:showLineNumber="true"
+        app:zoom="true"
+        app:wrapping="false"
+        app:editable="false"
+        app:zoomUpperLimit="10"
         />
 </LinearLayout>
